bad/array_subscript_invalid_type_int.example_compiler_output
ERROR
[1mbad/array_subscript_invalid_type_int.lat:3:3: [1;31merror: [0;1mvalue of non-array type `int` has no subscript operator[m
	3[42];
	 [1;32m^[m
